<resources>
    <string name="app_name">鈺晟精密-倉庫管理系統 </string>
    <string name="Title">鈺晟精密</string>
    <string name="Title2">倉庫管理系統</string>
    <string name="Work01">進貨作業</string>
    <string name="Work02">出貨作業</string>
    <string name="Work03">拆箱(包)入庫作業</string>
    <string name="Setup">資料傳輸&amp;刪除</string>
    <string name="Exit">離開</string>
    <string name="Mach_no">廠商:</string>
    <string name="Lot_no">批號:</string>
    <string name="Proc_no">序號:</string>
    <string name="ClearLayout">清除畫面</string>
    <string name="Update">資料更新</string>
    <string name="Export">匯出進貨資料</string>集
    <string name="ExportA02">匯出出貨資料</string>
    <string name="DeleteA01">刪除入庫資料</string>
    <string name="DeleteA02">刪除出庫資料</string>
    <string name="DeleteA03">刪除調撥資料</string>
    <string name="EmpSelect">選擇員工</string>
    <string name="Cust">客戶:</string>
    <string name="Cust_Hint">請輸入客戶代號</string>
    <string name="Barcode">條碼</string>
    <string name="ScanBarcode">請掃描條碼</string>
    <string name="Pdctname">品名:</string>
    <string name="Count">筆數:</string>
    <string name="Out_Count">已出庫數量:</string>
    <string name="ClearCust">清除客戶代號</string>
    <string name="ClearSupp">清除廠商代號</string>
    <string name="SearchA01">查詢收貨入庫作業</string>
    <string name="Search">查詢</string>
    <string name="title_activity_work01">work01</string>
    <string name="WorkType">工作類型:</string>
    <string name="WorkIn">進貨</string>
    <string name="WorkOut">出貨</string>
    <string name="WorkType01">序號</string>
    <string name="WorkType02">無序號</string>
    <string name="Qty">數量:</string>
    <string name="ChgCust">變更</string>
    <string name="ChgModel">變更</string>
    <string name="Save">儲存</string>
    <string name="tranqty">調撥數量</string>
    <string name="receive_message">查詢</string>
    <string name="lbl_stno">工號：</string>
    <string name="hint_input_emp_no">請輸入要查詢的工號</string>
    <string name="setup">設定</string>
    <string name="read">讀取</string>
    <string name="Emp">員工:</string>
    <string name="Emp_Hint">請輸入員工代號</string>
    <string name="Cust_Select">選擇客戶</string>
    <string name="Supp">廠商:</string>
    <string name="Supp_Hint">請輸入廠商代號</string>
    <string name="Supp_Select">選擇廠商</string>
    <string name="Type">產品品號:</string>
    <string name="Type_Hint">請輸入產品品號</string>
    <string name="Type_Select">選</string>
    <string name="Qty_Hint">請輸入每包數量</string>
    <string name="PrintQty">總包數:</string>
    <string name="PrintQty_Hint">請輸入總包數</string>
    <string name="Print">列印</string>
    <string name="Connect">連線印表機</string>
    <string name="Disconnect">中斷連線</string>
    <string name="SearchA02">查詢出庫作業</string>
    <string name="SearchW03">查詢拆箱(包)入庫作業</string>
    <string name="Work01_del">收貨條碼刪除作業</string>
    <string name="work01_date">收貨日期:</string>
    <string name="weight">重量:</string>
    <string name="weight_hint">請輸入重量</string>
    <string name="Work02_del">出貨條碼刪除作業</string>
    <string name="option_desc">印表機:</string>
    <string name="option1">廠商代碼</string>
    <string name="option2">廠商名稱</string>
    <string name="sure">確定</string>
    <string name="cancel">取消</string>
    <string name="password">密碼:</string>
    <string name="hint_input_password">請輸入密碼</string>
    <string name="emp_no">工號:</string>
    <string name="check_account">帳號檢查</string>
    <string name="frmOp5000">1.入庫作業</string>
    <string name="frmOp5001">2.出庫作業</string>
    <string name="frmOp5002">3.盤點作業</string>
    <string name="frmOp5003">5.產品資訊查詢作業</string>
    <string name="frmOp5005">6.儲位資訊查詢作業</string>
    <string name="frmOp7000">系統設定</string>
    <string name="frmOp9000">9.受入取消</string>
    <string name="status">狀態顯示區</string>
    <string name="use_date">使用期間:</string>
    <string name="use_time">使用次數:</string>
    <string name="latst_cust">最後一次使用客戶:</string>
    <string name="use_ok">桶子是否還可使用:</string>
    <string name="Line">線別:</string>
    <string name="In_aprt">入庫單位:</string>
    <string name="In_no">單號:</string>
    <string name="wh_no">儲位:</string>
    <string name="wh_old">原儲位:</string>
    <string name="wh_new">目標儲位:</string>
    <string name="wh_Type1">成品倉</string>
    <string name="wh_Type2">原料倉</string>
    <string name="pdct_no">料號:</string>
    <string name="pdct_name1">品名一:</string>
    <string name="pdct_name2">品名二:</string>
    <string name="unit">單位:</string>
    <string name="btnOp5004">4.調撥作業</string>
    <string name="safe_qty">安全庫存量:</string>
    <string name="now_qty">儲位庫存量:</string>
    <string name="total_qty">總庫存量:</string>
    <string name="in_qty">入庫數量:</string>
    <string name="upd_qty">修改數量:</string>
    <string name="search02">查詢掃描紀錄</string>
    <string name="out_aprt">出庫單位:</string>
    <string name="out_no">單號:</string>
    <string name="note">備註:</string>
    <string name="out_qty">出庫數量:</string>
    <string name="chk_qty">儲位應盤數量:</string>
    <string name="rel_qty">實盤數量:</string>
    <string name="logout">登出系統</string>
    <string name="setpara_1">設定PHP主機、站別代碼</string>
</resources>
