<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txvWork01Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Work01"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="@string/work01_date"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txvIndate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txvEmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:text="@string/Emp"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spnEmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txvSupp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:text="@string/Supp"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spnSup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.51"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:text="@string/Type"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="InefficientWeight" />

        <EditText
            android:id="@+id/edtPartNo"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:textSize="18sp"
            android:layout_weight="0.71" />

        <Spinner
            android:id="@+id/spnPdct"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txvQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:text="@string/Qty"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtQty"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.51"
            android:ems="10"
            android:hint="@string/Qty_Hint"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:text="@string/PrintQty"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="InefficientWeight" />

        <EditText
            android:id="@+id/edtPrintQty"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:ems="10"
            android:hint="@string/PrintQty_Hint"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.57"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtWeight"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="number|numberDecimal"
            android:selectAllOnFocus="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="斤"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtWeight2"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="兩"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rdgSupp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_desc"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rdoA3230B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.04"
                    android:checked="true"
                    android:text="A-3x"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rdoPR2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.06"
                    android:checked="true"
                    android:text="PRx"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rdoRP2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.09"
                    android:checked="true"
                    android:text="RPx"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rdoPC4X"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.06"
                    android:text="PC4x"
                    android:textSize="12sp" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btnPrint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:text="@string/Print"
            android:textSize="20sp"
            tools:ignore="InefficientWeight" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Count"
                android:textSize="24sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txvCount"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSearchA01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/SearchA01"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnWork01_del"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Work01_del"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnCon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Connect"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnDiscon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Disconnect"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
