<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_light"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/btnOp5000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frmOp5000"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btnOp5001"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frmOp5001"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btnOp5002"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frmOp5002"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btnOp5004"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnOp5004"
            android:textSize="28sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnOp5003"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frmOp5003"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btnOp5005"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frmOp5005"
            android:textSize="28sp"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:weightSum="1">

        <Button
            android:id="@+id/btnOp9000"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:text="@string/frmOp9000"
            android:textSize="28sp"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="更新"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btnSetPara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/logout"
            android:textSize="28sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1">

        <Button
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/Exit"
            android:textSize="28sp"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/edtSelect"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:maxLength="1"
            android:textSize="18sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txvTitle2"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/Title2"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1">

        <Button
            android:id="@+id/btnSoap01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Soap Test 01"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnPHP01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PHP TEST 01"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btnDataProcess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Setup"
            android:textSize="20sp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1">

        <Button
            android:id="@+id/btnPhoto01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="拍照"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnWritePad01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="手寫"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnWorkPrint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="進貨+列印"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">


        <TextView
            android:id="@+id/txvFuncID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="FuncID"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txvFuncMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text=" : "
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text=""
            android:textSize="18sp"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>