<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/txvSetupTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Setup"
            android:textAlignment="center"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnExportA01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Export"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnDelA01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/DeleteA01"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Button"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Update"
                    android:textSize="24sp"
                    android:visibility="invisible" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnExportA02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ExportA02"
                android:textSize="24sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnDelA02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/DeleteA02"
                android:textSize="24sp"
                android:visibility="visible" />
        </LinearLayout>

        <TextView
            android:id="@+id/txvResult4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="資料匯出&amp;刪除狀態區"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="員工資料更新狀態區"
            android:textSize="24sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnUploadPHP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PHP檔案上傳  >  fileUpload2.php"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="HTTP 檔案下載 "
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnDManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Download Manager 檔案下載 "
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
